added some more styles
changed the background colour
removed link decorations

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <h1 id="city"> </h1>
   <br>
   <div class="Today" id="current-date">
-    <h1> Date and Time </h1>
+    <h1>Date and Time</h1>
   </div>
 <h2 class="caption">
-    <span class="temperature" id="temperature"> </span> <span class="units"> <a href="#" id="celsius-link"> °C </a> | <a href="#" id="fahrenheit-link"> °F</a> </span>
+    <span class="temperature" id="temperature"> </span> <span class="units"> <a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a> </span>
 </h2>
 
 <div class="row col">
@@ -104,7 +104,9 @@
 </div>
 </div>
 </div>
-<p> <a href="https://github.com/queensao/Weather-App-1"> Open-source Code</a> by Queen Asianya-Olisa</p>
+<p>
+<a href="https://github.com/queensao/Weather-App-1"> Open-source Code</a> by Queen Asianya-Olisa
+</p>
 <script src="src/Javascript.js"></script>
   </body>
 </html>
