added images to html
added weather image and structure  for change of weather

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
      </form>
 <h1 id="city"> </h1>
   <br>
+  
   <div class="Today" id="current-date">
+    
     <h1>Date and Time</h1>
   </div>
 <h2 class="caption">
+  <span><img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+    alt="clear"
+    id="icon"/> </span>
     <span class="temperature" id="temperature"> </span> <span class="units"> <a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a> </span>
 </h2>
 
