--- a/index.html
+++ b/index.html
@@ -60,29 +60,12 @@
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind-speed"></span>mph</li>
         </ul>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-day">
-                Fri
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="clear"
-                  width="24"
-                  class="weather-icon"
-                />
-                <div class="weather-forecast-temp">
-                  <span class="weather-forecast-temp-max"> 18°</span> |
-                  <span class="weather-forecast-temp-min">12°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="weather-forecast" id="forecast">
           <hr />
           <p>
             <a href="https://github.com/queensao/Weather-App-1">
-              Open-source Code</a
-            >
+              Open-source Code
+            </a>
             by Queen Asianya-Olisa
           </p>
         </div>
