forecast is working
updated the forecast function so its integrated with the API.

It now shows the real forecast along with the max and min temps

added more styling

--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind-speed"></span>mph</li>
         </ul>
-        <div class="weather-forecast" id="forecast">
-          <hr />
-          <p>
-            <a href="https://github.com/queensao/Weather-App-1">
-              Open-source Code
-            </a>
-            by Queen Asianya-Olisa
-          </p>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
+        <hr />
+        <p>
+          <a href="https://github.com/queensao/Weather-App-1">
+            Open-source Code
+          </a>
+          by Queen Asianya-Olisa
+        </p>
       </div>
     </div>
     <script src="src/Javascript.js"></script>
