--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="weather-forecast" id="forecast"></div>
         <hr />
         <p>
-          <a href="https://github.com/queensao/Weather-App-1">
+          <a id="link" href="https://github.com/queensao/Weather-App-1">
             Open-source Code
           </a>
           by Queen Asianya-Olisa
